<resources>
    <string name="app_name">Eazyrento</string>
    <string name="password_reset_instruction">Enter your registered Email/Phone Number below to receive password reset instruction.
    </string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="i_agree">I agree to </string>
    <string name="and">and </string>
    <string name="t_and_c">Terms &amp; Conditions</string>
    <string name="gdpr_rights">GDPR rights.</string>
    <string name="send">Send</string>
    <string name="enter_opt">Enter OTP</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login"><u>Login!</u></string>
    <string name="login_with">Login With:</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_to_continue_as">Login to continue as</string>
    <string name="otp_sent">We have sent OTP to the email address</string>
    <string name="register"><u>Register</u></string>
    <string name="agent">Agent</string>
    <string name="opt_detail">We\'ve sent OTP the email address p@g.com.please enter it below to complete
        verification
    </string>
    <string name="conti">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="wishlist">Wishlist</string>
    <string name="orders">Orders</string>
    <string name="title_notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="support">Support</string>
    <string name="my_address">My Addresses</string>
    <string name="booking_details">Booking Details</string>
    <string name="thank_you">Do you want to submit the payment?</string>
    <string name="vehicle_not_available">The vehicle you have searched is not available.You can notify admin to add this
        vehicle.
    </string>
    <string name="order">Order</string>
    <string name="profie">Profile</string>
    <string name="help"><![CDATA[Help & Support]]></string>
    <string name="select_category">Select Category</string>
    <string name="under_development">Under Development</string>
    <string name="vehicle">Vehicles</string>
    <string name="add_product">"Add Product"</string>
    <string name="product_list">"List of Product"</string>
    <string name="others">"Others"</string>
    <string name="view_product">"View Product"</string>
    <string name="order_review">Order Review</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment">Payment</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_received">Are you sure? You have received the payment.</string>
    <string name="delete_notification">Do you want to delete this notification?</string>
    <string name="requestpayment">Request a Payment</string>
    <string name="details">Details</string>
    <string name="order_submit">Thank you for submitting your order.Our agent will call you shortly.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="agent_message">Let\'s get work done!</string>
    <string name="view_all">View All</string>
    <string name="no_booking_avil">No booking available</string>
    <string name="total_booking">Total Bookings</string>
    <string name="complete">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="rejected">Rejected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendbutton">Send</string>
    <string name="volvo_fh_truck"> </string>
    <string name="totalprice">Total \n Price</string>
    <string name="hint_enter_booking_price">Enter booking price</string>
    <string name="per_hour">Per Hour</string>
    <string name="do_you_want_driver">Do you want vehicle with driver?</string>
    <string name="select_work_start">Select work start time and date</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="start_date_hint">01-Jan-2020</string>
    <string name="start_time_hint">8:00 AM</string>
    <string name="end_date_hint">01-Jan-2020</string>
    <string name="end_time_hint">9:00 AM</string>
    <string name="truck_quantity">Item Quantity-</string>
    <string name="one">1</string>
    <string name="work_location">Work Location</string>
    <string name="change">Change</string>
    <string name="select_address">Select</string>
    <string name="add_another_product">Add To Cart</string>
    <string name="next">Next</string>
    <string name="no_notification">No Notification</string>
    <string name="at_vero_os">At vero os et accusamus et iusto odio dignissimos ducimus</string>
    <string name="truck_name">Truck Name</string>
    <string name="truck_capacity">Truck Capacity</string>
    <string name="na">NA</string>
    <string name="submit">Submit</string>
    <string name="sub_order">Sub Order</string>
    <string name="sub_order_merchnat">Merchant</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="orderid">Order ID - </string>
    <string name="booking_id">Booking ID - </string>
    <string name="pending_">Pending Amount - </string>
    <string name="total_price">Total \n Price</string>
    <string name="pending_amount">Pending Amount - </string>
    <string name="totalPrice">Total Price</string>
    <string name="pendingAmount">Pending Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="pay_via_cash">Pay Via Cash</string>
    <string name="pay_via_paypal">Pay Online</string>
    <string name="customer">Customer</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name">Company Name</string>
    <string name="business_name">Your Business</string>
    <string name="gender">Gender</string>
    <string name="description">Description</string>
    <string name="description_star">Description*</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome</string>
    <string name="register_to_continue">Register to continue as</string>
    <string name="email_phonenumber">Email/Phone Number</string>
    <string name="booking_n_price">Total\nPrice</string>
    <string name="downtown_dubai">Downtown, Dubai,United Arab Emirates</string>
    <string name="address_line1">Address Line</string>
    <string name="address_hint">Apartment,city,state,country name</string>
    <string name="save_as">Save As</string>
    <string name="near_by_driver">Near by Drivers</string>
    <string name="bookings">Bookings</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_order">Update Order</string>
    <string name="select_availability">Select Availability</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="booking_price_text">Booking Price</string>
    <string name="booking_price_">Booking\nPrice</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="diesel">Diesel</string>
    <string name="document">Document</string>
    <string name="with_driver">With Driver</string>
    <string name="upload">Upload</string>
    <string name="search_vehicles">Search</string>
    <string name="are_you_sure">Are you sure you want delete this Product</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hello_this_is">Hello this is \n demo home page for merchant....\n Thank you!!</string>
    <string name="open_orders">Open Orders</string>
    <string name="fathi_asfour">Fathi Asfour</string>
    <string name="fathi_asfour_gmail">fathi.asfour@gmail.com</string>
    <string name="phone_no">+966-000-000-0000</string>
    <string name="rental_company">Rental Company</string>
    <string name="we_denounce">We denounce with righteous indignation and dislike men who are so beguiled.</string>
    <string name="bilad_al">Bilad Al</string>
    <string name="merchant">Merchant</string>
    <string name="select_location">Select Location</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="truck_power_kv">125kw(170)@2500rpm</string>
    <string name="price">Price</string>
    <string name="petrol">Petrol</string>
    <string name="write_any_other">Write any other details \n \n</string>
    <string name="notify_admin">Notify Admin</string>
    <string name="feedback">Feedback</string>
    <string name="no_result_found">No Result Found</string>
    <string name="add_new_address">Add New Address</string>
    <string name="hi_ajeer">Hi,Ajeer</string>
    <string name="_45">0</string>
    <string name="tax_included">Tax Included</string>
    <string name="rate_amp_review"><![CDATA[Rate & Review]]></string>
    <string name="delivered_on">* Delivered on 12 Dec 2019</string>
    <string name="ajeer_mohammed">Ajeer Mohammed</string>
    <string name="view_history">View History</string>
    <string name="pay_now">Pay Now</string>
    <string name="_14_days">14 days</string>
    <string name="_9995hh">9995hh</string>
    <string name="for_maintenance">For Maintenance</string>
    <string name="happy_with_the_service">Happy with the service?</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="choose_to_login_as">Choose to login as,</string>
    <string name="truck">Truck</string>
    <string name="remove">Remove</string>
    <string name="payment_pending">Payment Pending</string>
    <string name="_02_feb_2020">02 Feb 2020</string>
    <string name="default_address">Default Address</string>
    <string name="full_power">Full Power</string>
    <string name="view_details">View Details</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="add_your_notes_here">Add your notes here.</string>
    <string name="heading">Heading</string>
    <string name="note_added">Note Added</string>
    <string name="mynotes">My Notes</string>
    <string name="assign_merchant">Assign Merchant</string>
    <string name="distance_3km">Distance, 3km</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_type">Select Type</string>
    <string name="otp_timer">Resend code after</string>
    <string name="notif_clear_all">Clear All</string>
<string name="selected_item">Selected item:</string>
    <string name="order_date">Order Date</string>
    <string name="_24_jun_1212">24-jun-1212</string>
    <string name="day">Day</string>
    <string name="give_a_tip">Give a Tip</string>
    <string name="price_in_dollar"> </string>
    <string name="about_app">About App</string>
    <string name="my_addresses">My Addresses</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
</resources>