<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.eazyrento.merchant.view.activity.MerchantMainActivity">
    <group
            android:id="@+id/group1"
            android:checkableBehavior="single">
        <item
                android:id="@+id/merchant_nav_dashboard"
                android:icon="@mipmap/dashboard"
                android:title="@string/dashboard" />

        <item
                android:id="@+id/merchant_nav_about"
                android:icon="@mipmap/about"
                android:title="@string/about_app" />

        <item
                android:icon="@mipmap/my_address"
                android:id="@+id/merchant_nav_my_address"
                android:title="@string/my_addresses" />

        <item
                android:id="@+id/merchant_nav_tc"
                android:icon="@mipmap/t_c"
                android:title="@string/terms_of_services" />

        <item
                android:id="@+id/merchant_nav_help"
                android:icon="@mipmap/help_support"
                android:title="@string/help_amp_support" />

        <item
                android:id="@+id/select_language"
                android:icon="@mipmap/t_c"
                android:title="@string/language" />
        <item
                android:id="@+id/merchant_nav_logout"
                android:icon="@mipmap/logout"
                android:title="@string/logout" />
    </group>

</menu>