<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/navigation_wishlist"
            android:icon="@mipmap/wishlist_inactive"
            android:title="@string/wishlist" />

    <item
            android:id="@+id/navigation_order"
            android:icon="@mipmap/order_inactive"
            android:title="@string/orders"/>
    <item
            android:id="@+id/navigation_home"
            android:icon="@mipmap/home_inactive"
            android:title="@string/title_home" />


    <item
            android:id="@+id/navigation_bookings"
            android:icon="@mipmap/order_inactive"
            android:title="@string/bookings"/>
    <item
            android:id="@+id/navigation_support"
            android:icon="@mipmap/support_inactive"
            android:title="@string/support"/>

</menu>