<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_payment_history"
        android:paddingTop="@dimen/_10sdp"
        >
<!--top view with text view and close image-->
        <TextView
                android:id="@+id/top_text_view"
                style="@style/DocumentTextView"
                android:text="@string/select_availability"
                android:layout_alignParentTop="true"

                >
        </TextView>

<!--day wise layout-->
    <LinearLayout
            android:id="@+id/lnr_day_wise"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/top_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            >

        <TextView

                android:text="@string/sun"
                style="@style/days_style"
                />
        <TextView
                android:text="@string/mon"
                style="@style/days_style"
                />
        <TextView
                android:text="@string/tue"
                style="@style/days_style"
                />
        <TextView
                android:text="@string/wed"
                style="@style/days_style"
                />
        <TextView
                android:text="@string/thu"
                style="@style/days_style"
                />
        <TextView
                android:text="@string/fri"
                style="@style/days_style"
                />
        <TextView
                android:text="@string/sat"
                style="@style/days_style"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_below="@+id/lnr_day_wise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">
        <RelativeLayout
                android:id="@+id/layout_truck_quantity"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AgentBoldTextCard"
                    android:text="@string/truck_quantity" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/minus_quantity"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:background="@drawable/button_add"
                        android:padding="@dimen/_5sdp"
                        android:src="@mipmap/minus" />

                <TextView
                        android:id="@+id/item_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_22sdp"
                        android:background="@drawable/itemquantity_bg"
                        android:fontFamily="@font/bree_serif"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="@string/one"
                        android:textColor="@color/black" />

                <ImageView
                        android:id="@+id/add_quantity"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:background="@drawable/button_minus"
                        android:padding="@dimen/_5sdp"
                        android:src="@mipmap/plus" />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_price_text"
                        style="@style/AgentBoldTextCard">

                </TextView>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:text="@string/booking_price"
                        android:textSize="@dimen/_13sdp">

                </TextView>
            </LinearLayout>
            <TextView android:layout_width="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:id="@+id/view_div_2"
                    android:background="@android:color/darker_gray"
                    android:layout_height="match_parent"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AgentBoldTextCard"
                        android:text="@string/fuel_type">

                </TextView>

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bree_serif"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/diesel"
                        android:textSize="@dimen/_13sdp">

                </Spinner>
            </LinearLayout>
        </LinearLayout>
        <TextView
                style="@style/GreyLineTextView"
                android:id="@+id/view_div_1"/>

        <TextView
                style="@style/DocumentTextView"
                android:text="@string/document">
        </TextView>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp">
        </Spinner>

        <TextView
                style="@style/GreyLineTextView"
                android:id="@+id/view_div_3"/>

        <TextView
                style="@style/DocumentUploadButton"
                android:background="@drawable/payment_status">

        </TextView>

            <TextView
                    style="@style/WithDriverTextView"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:drawableStart="@drawable/drawable_left_image_check"
                    />


        <TextView
                android:id="@+id/merchant_upload_btn"
                android:text="@string/submit"
                style="@style/AddVehicleSubmitDialog">
        </TextView>

    </LinearLayout>
</RelativeLayout>