<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        >

    <TextView android:layout_width="match_parent"
            android:text="@string/truck"
            android:id="@+id/tv_order_product_name"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/bree_serif"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/booking_price"
                android:layout_weight="30"
                android:layout_width="0dp"
                android:text="@string/booking_n_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/bree_serif"
                android:layout_height="@dimen/_50sdp"/>

        <TextView
                android:id="@+id/tv_booking_price"
                android:fontFamily="@font/bree_serif"
                android:layout_weight="40"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_24sdp"
                android:text="@string/booking_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="30">
        <Button
                android:id="@+id/customer_payment_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="end"
                android:textAllCaps="false"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@drawable/button_gradient"
                android:textColor="@color/white"
                android:text="@string/pay_now"
                android:layout_marginEnd="@dimen/_5sdp">

        </Button>
            <Button
                    android:id="@+id/agent_view_history"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="end"
                    android:textAllCaps="false"
                    android:visibility="invisible"
                    android:background="@drawable/button_gradient"
                    android:textColor="@color/white"
                    android:text="@string/view_history"
                    android:layout_marginEnd="@dimen/_5sdp">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/tv_order_id"
            android:fontFamily="@font/bree_serif"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:text="@string/orderid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/pending_amount"
            android:fontFamily="@font/bree_serif"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:visibility="invisible"
            android:textSize="@dimen/_14sdp"
            android:text="@string/pending_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/order_product_quantity"
                android:fontFamily="@font/bree_serif"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:text="@string/truck_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/order_rate_review"
                android:fontFamily="@font/bree_serif"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/_50sdp"
                android:visibility="invisible"
                android:background="@drawable/button_gradient"
                android:textSize="@dimen/_15sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/rate_amp_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>