<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar"
    android:id="@+id/toolbar"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_above="@+id/btn_submit"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:layout_marginLeft="@dimen/_15sdp"
                  android:layout_marginRight="@dimen/_15sdp"
                  android:layout_below="@+id/toolbar"
                  android:layout_height="match_parent">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/select_category"
                  android:textSize="@dimen/_15sdp"
                  android:fontFamily="@font/bree_serif"
                  android:textColor="#000"
                  android:layout_height="wrap_content"/>

        <Spinner
                android:id="@+id/vehicle_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:drawableEnd="@mipmap/expand"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/_1sdp"
              android:background="@android:color/darker_gray"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/truck_name"
                  android:layout_marginTop="@dimen/_15sdp"
                  android:textSize="@dimen/_15sdp"
                  android:fontFamily="@font/bree_serif"
                  android:textColor="#000"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:text="@string/volvo_fh_truck"
                  android:textSize="@dimen/_15sdp"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:fontFamily="@font/bree_serif"
                  android:layout_height="@dimen/_40sdp"/>


        <TextView android:layout_width="wrap_content"
                  android:text="@string/truck_capacity"
                  android:layout_marginTop="@dimen/_15sdp"
                  android:textSize="@dimen/_15sdp"
                  android:fontFamily="@font/bree_serif"
                  android:textColor="#000"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:text="@string/na"
                  android:textSize="@dimen/_15sdp"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:fontFamily="@font/bree_serif"
                  android:layout_height="@dimen/_40sdp"/>
        <View android:layout_width="match_parent"
              android:layout_height="@dimen/_1sdp"
              android:background="@android:color/darker_gray"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/details"
                  android:layout_marginTop="@dimen/_15sdp"
                  android:textSize="@dimen/_15sdp"
                  android:fontFamily="@font/bree_serif"
                  android:textColor="#000"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:text="@string/details"
                  android:textSize="@dimen/_15sdp"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:fontFamily="@font/bree_serif"
                  android:layout_height="@dimen/_40sdp"/>

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/_1sdp"
              android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <Button android:layout_width="match_parent"
            android:text="@string/submit"
            android:id="@+id/btn_submit"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/bree_serif"
            android:background="@drawable/button_save"
            android:layout_alignParentBottom="true"
            android:layout_height="@dimen/_40sdp"/>

</RelativeLayout>